gccida/c0/distribute_notes
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12613:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
next_note = (  struct rtx_def *)notes[1]; 
                                ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12636:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
temd = ( rtx)i3[1]; 
             ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12646:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v41 = ( rtx)temd[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12714:29: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
links = (  struct rtx_def *)temd[3]; 
                            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12725:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
temd = ( rtx)temd[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12801:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)notes->fld[0].rtwint)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12802:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v34 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)notes->fld[0].rtwint)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12848:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)notes->fld[0].rtwint)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12849:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v30 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)notes->fld[0].rtwint)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12884:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( teme = ( rtx)place[1]; rtx_class[( unsigned __int16)*( _DWORD *)teme] != 105; teme = ( rtx)teme[1] ) 
                   ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12884:98: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( teme = ( rtx)place[1]; rtx_class[( unsigned __int16)*( _DWORD *)teme] != 105; teme = ( rtx)teme[1] ) 
                                                                                                 ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12937:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[reg_raw_mode[ia]] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12938:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v26 = mode_class_0[reg_raw_mode[ia]] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12970:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)notes, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12970:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)notes, 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12971:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)notes), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:12971:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)notes), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:13103:15: error: invalid operands to binary expression ('struct rtx_def' and 'long long')
if ( place[4] != notes->fld[0].rtwint ) 
     ~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/combine.c:13111:16: error: invalid operands to binary expression ('struct rtx_def' and 'long long')
if ( place2[4] != notes->fld[0].rtwint ) 
     ~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/distribute_notes/src/obj/combine.o] Error 1
